@@ -1,44 +1,0 @@
-def shrink(fname):
-    f = open(fname,'r'); lines = f.readlines(); f.close()
-    out = []
-    fixes = [
-    'vm','gc','params','STR',
-    'int','float','return','free','delete','init',
-    'abs','round','system','pow','div','raise','hash','index','printf','main']
-    for line in lines:
-        #quit if we've already converted
-        if '\t' in line: return ''.join(lines)
-        
-        #change "    " into "\t" and remove blank lines
-        if len(line.strip()) == 0: continue
-        line = line.rstrip()
-        l1,l2 = len(line),len(line.lstrip())
-        line = "\t"*((l1-l2)/4)+line.lstrip()
-        
-        #remove comments
-        if '.c' in fname or '.h' in fname:
-            if line.strip()[:2] == '//': continue
-        if '.py' in fname:
-            if line.strip()[:1] == '#': continue
-        
-        #remove the "namespace penalty" from tinypy ...
-        for name in fixes:
-            line = line.replace('TP_'+name,'t'+name)
-            line = line.replace('tp_'+name,'t'+name)
-        line = line.replace('TP_','')
-        line = line.replace('tp_','')
-        
-        out.append(line)
-    return '\n'.join(out)+'\n'
-
-if __name__ == '__main__':
-    for fname in [
-        'tokenize.py','parse.py','encode.py','py2bc.py',
-        'tp.h','list.c','dict.c','misc.c','string.c','builtins.c',
-        'gc.c','ops.c','vm.c','tp.c','tpmain.c',
-        'build.py','tinypy-sdl.c','vmmain.c',
-        ]:
-        txt = shrink(fname)
-        f = open(fname,'w')
-        f.write(txt)
-        f.close()
